--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
-  "name": "@arkecosystem/rpc-server",
-  "description": "RPC server acting as lite client for the ARK blockchain",
+  "name": "@arkecosystem/json-rpc",
+  "description": "A JSON-RPC 2.0 Specification compliant server to interact with the ARK blockchain.",
   "version": "1.0.0",
   "contributors": [
     "François-Xavier Thoorens <fx@ark.io>",
@@ -10,7 +10,7 @@
   "license": "MIT",
   "main": "lib/index.js",
   "bin": {
-    "ark-rpc": "./bin/server start"
+    "ark-json-rpc": "./bin/server start"
   },
   "scripts": {
     "start": "./bin/server start",
