chore(deps): remove unused dependencies (#5)

--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
         "build:watch": "yarn clean && yarn compile -w",
         "clean": "del dist",
         "compile": "./node_modules/typescript/bin/tsc",
+        "format": "yarn lint && yarn prettier",
+        "lint": "./node_modules/tslint/bin/tslint -c ./tslint.json -p ./tslint-config.json './src/**/*.ts' --fix",
         "prepack": "./node_modules/.bin/oclif-dev manifest && npm shrinkwrap",
         "postpack": "rm -f oclif.manifest.json",
         "prepublishOnly": "yarn build",
+        "prettier": "prettier --write \"./*.{ts,js,json,md}\" \"./src/**/*.{ts,js,json,md}\" \"./__tests__/**/*.{ts,js,json,md}\"",
         "test": "jest --forceExit --runInBand"
     },
     "jest": {
@@ -79,17 +82,13 @@
         "@oclif/plugin-help": "^2.1.6",
         "@oclif/plugin-not-found": "^1.2.2",
         "@oclif/plugin-plugins": "^1.7.8",
-        "bip38": "^2.0.2",
         "bip39": "^3.0.2",
         "boom": "^7.3.0",
         "chalk": "^2.4.2",
         "clear": "^0.1.0",
-        "cli-progress": "^2.1.1",
         "cli-table3": "^0.5.1",
         "cli-ux": "^5.2.1",
-        "dlv": "^1.1.2",
         "env-paths": "^2.2.0",
-        "envfile": "^3.0.0",
         "execa": "^1.0.0",
         "fast-levenshtein": "^2.0.6",
         "fs-extra": "^7.0.1",
@@ -97,11 +96,9 @@
         "is-reachable": "^3.1.0",
         "keyv": "^3.1.0",
         "latest-version": "^5.1.0",
-        "listr": "^0.14.3",
         "lodash.minby": "^4.6.0",
         "lodash.sample": "^4.2.1",
         "nodejs-tail": "^1.1.0",
-        "ora": "^3.4.0",
         "pino": "^5.12.3",
         "pino-pretty": "^3.0.0",
         "pretty-bytes": "^5.2.0",
@@ -115,10 +112,7 @@
     "devDependencies": {
         "@oclif/dev-cli": "^1.22.0",
         "@sindresorhus/tsconfig": "^0.3.0",
-        "@types/bip38": "^2.0.1",
         "@types/boom": "^7.2.1",
-        "@types/cli-progress": "^1.8.1",
-        "@types/dlv": "^1.1.1",
         "@types/execa": "^0.9.0",
         "@types/fast-levenshtein": "^0.0.1",
         "@types/fs-extra": "^5.1.0",
@@ -128,10 +122,8 @@
         "@types/jest": "^24.0.12",
         "@types/keyv": "^3.1.0",
         "@types/keyv__sqlite": "^2.0.0",
-        "@types/listr": "^0.14.0",
         "@types/lodash.minby": "^4.6.6",
         "@types/lodash.sample": "^4.2.6",
-        "@types/nock": "^10.0.2",
         "@types/pino": "^5.20.0",
         "@types/prettier": "^1.16.3",
         "@types/pretty-bytes": "^5.1.0",
@@ -142,11 +134,9 @@
         "@types/uuid": "^3.4.4",
         "@types/wif": "^2.0.1",
         "codecov": "^3.4.0",
-        "cross-env": "^5.2.0",
         "del-cli": "^1.1.0",
         "jest": "^24.8.0",
         "jest-extended": "^0.11.1",
-        "nock": "^10.0.6",
         "prettier": "^1.17.0",
         "rimraf": "^2.6.3",
         "ts-jest": "^24.0.2",
