--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@arkecosystem/json-rpc",
+    "name": "@arkecosystem/exchange-json-rpc",
     "version": "1.0.0-next.5",
     "description": "A JSON-RPC 2.0 specification compliant server to interact with the ARK Blockchain.",
     "license": "MIT",
@@ -12,10 +12,10 @@
     "main": "dist/index",
     "types": "dist/index",
     "bin": {
-        "ark-json-rpc": "./bin/run"
+        "exchange-json-rpc": "./bin/run"
     },
     "scripts": {
-        "ark-json-rpc": "./bin/run",
+        "exchange-json-rpc": "./bin/run",
         "build": "yarn clean && yarn compile",
         "build:watch": "yarn clean && yarn compile -w",
         "clean": "del dist",
@@ -68,12 +68,12 @@
     "dependencies": {
         "@arkecosystem/core-utils": "^2.4.0-next.3",
         "@arkecosystem/crypto": "^2.4.0-next.3",
-        "@faustbrian/dato": "^0.3.0",
+        "@faustbrian/dato": "^0.3.1",
         "@faustbrian/foreman": "^0.1.2",
-        "@faustbrian/hapi-json-rpc": "^0.1.0",
-        "@faustbrian/hapi-whitelist": "^0.1.2",
         "@hapi/boom": "^7.4.2",
         "@hapi/hapi": "^18.3.1",
+        "@hapist/json-rpc": "^0.1.0",
+        "@hapist/whitelist": "^0.1.0",
         "@keyv/sqlite": "^2.0.0",
         "@oclif/command": "^1.5.13",
         "@oclif/config": "^1.13.0",
@@ -83,7 +83,6 @@
         "@oclif/plugin-not-found": "^1.2.2",
         "@oclif/plugin-plugins": "^1.7.8",
         "bip39": "^3.0.2",
-        "boom": "^7.3.0",
         "chalk": "^2.4.2",
         "clear": "^0.1.0",
         "cli-table3": "^0.5.1",
@@ -91,15 +90,14 @@
         "env-paths": "^2.2.0",
         "execa": "^1.0.0",
         "fast-levenshtein": "^2.0.6",
-        "fs-extra": "^7.0.1",
-        "got": "^9.6.0",
+        "fs-extra": "^8.0.1",
         "is-reachable": "^3.1.0",
         "keyv": "^3.1.0",
         "latest-version": "^5.1.0",
         "lodash.minby": "^4.6.0",
         "lodash.sample": "^4.2.1",
         "nodejs-tail": "^1.1.0",
-        "pino": "^5.12.3",
+        "pino": "^5.12.4",
         "pino-pretty": "^3.0.0",
         "pretty-bytes": "^5.2.0",
         "pretty-ms": "^5.0.0",
@@ -115,17 +113,16 @@
         "@types/boom": "^7.2.1",
         "@types/execa": "^0.9.0",
         "@types/fast-levenshtein": "^0.0.1",
-        "@types/fs-extra": "^5.1.0",
-        "@types/got": "^9.4.4",
+        "@types/fs-extra": "^7.0.0",
         "@types/hapi__boom": "^7.4.0",
         "@types/hapi__hapi": "^18.2.1",
-        "@types/jest": "^24.0.12",
+        "@types/jest": "^24.0.13",
         "@types/keyv": "^3.1.0",
         "@types/keyv__sqlite": "^2.0.0",
         "@types/lodash.minby": "^4.6.6",
         "@types/lodash.sample": "^4.2.6",
         "@types/pino": "^5.20.0",
-        "@types/prettier": "^1.16.3",
+        "@types/prettier": "^1.16.4",
         "@types/pretty-bytes": "^5.1.0",
         "@types/pretty-ms": "^4.0.0",
         "@types/prompts": "^2.4.0",
@@ -133,11 +130,11 @@
         "@types/semver": "^6.0.0",
         "@types/uuid": "^3.4.4",
         "@types/wif": "^2.0.1",
-        "codecov": "^3.4.0",
+        "codecov": "^3.5.0",
         "del-cli": "^1.1.0",
         "jest": "^24.8.0",
         "jest-extended": "^0.11.1",
-        "prettier": "^1.17.0",
+        "prettier": "^1.17.1",
         "rimraf": "^2.6.3",
         "ts-jest": "^24.0.2",
         "tslint": "^5.16.0",
@@ -160,7 +157,7 @@
                 "./dist/cli/hooks/command_not_found/suggest"
             ]
         },
-        "bin": "ark-json-rpc",
+        "bin": "exchange-json-rpc",
         "plugins": [
             "@oclif/plugin-autocomplete",
             "@oclif/plugin-commands",
