--- a/package.json
+++ b/package.json
@@ -68,11 +68,10 @@
     "dependencies": {
         "@arkecosystem/core-utils": "^2.4.0-next.3",
         "@arkecosystem/crypto": "^2.4.0-next.3",
-        "@faustbrian/dato": "^0.3.1",
         "@faustbrian/foreman": "^0.1.2",
         "@hapi/boom": "^7.4.2",
         "@hapi/hapi": "^18.3.1",
-        "@hapist/json-rpc": "^0.1.0",
+        "@hapist/json-rpc": "^0.2.0",
         "@hapist/whitelist": "^0.1.0",
         "@keyv/sqlite": "^2.0.0",
         "@oclif/command": "^1.5.13",
@@ -87,6 +86,7 @@
         "clear": "^0.1.0",
         "cli-table3": "^0.5.1",
         "cli-ux": "^5.2.1",
+        "dayjs": "^1.8.14",
         "env-paths": "^2.2.0",
         "execa": "^1.0.0",
         "fast-levenshtein": "^2.0.6",
@@ -101,7 +101,7 @@
         "pino-pretty": "^3.0.0",
         "pretty-bytes": "^5.2.0",
         "pretty-ms": "^5.0.0",
-        "prompts": "^2.0.4",
+        "prompts": "^2.1.0",
         "read-last-lines": "^1.7.1",
         "semver": "^6.0.0",
         "uuid": "^3.3.2",
