--- a/package.json
+++ b/package.json
@@ -73,7 +73,6 @@
         "@hapi/hapi": "^18.3.1",
         "@hapist/json-rpc": "^0.2.0",
         "@hapist/whitelist": "^0.1.0",
-        "@keyv/sqlite": "^2.0.0",
         "@oclif/command": "^1.5.14",
         "@oclif/config": "^1.13.0",
         "@oclif/plugin-autocomplete": "^0.1.0",
@@ -81,6 +80,7 @@
         "@oclif/plugin-help": "^2.1.6",
         "@oclif/plugin-not-found": "^1.2.2",
         "@oclif/plugin-plugins": "^1.7.8",
+        "better-sqlite3": "^5.4.0",
         "bip39": "^3.0.2",
         "chalk": "^2.4.2",
         "clear": "^0.1.0",
@@ -92,7 +92,6 @@
         "fast-levenshtein": "^2.0.6",
         "fs-extra": "^8.0.1",
         "is-reachable": "^3.1.0",
-        "keyv": "^3.1.0",
         "latest-version": "^5.1.0",
         "lodash.minby": "^4.6.0",
         "lodash.sample": "^4.2.1",
@@ -104,6 +103,7 @@
         "prompts": "^2.1.0",
         "read-last-lines": "^1.7.1",
         "semver": "^6.1.1",
+        "sql": "^0.78.0",
         "uuid": "^3.3.2",
         "wif": "^2.0.6"
     },
@@ -117,8 +117,6 @@
         "@types/hapi__boom": "^7.4.0",
         "@types/hapi__hapi": "^18.2.1",
         "@types/jest": "^24.0.13",
-        "@types/keyv": "^3.1.0",
-        "@types/keyv__sqlite": "^2.0.0",
         "@types/lodash.minby": "^4.6.6",
         "@types/lodash.sample": "^4.2.6",
         "@types/pino": "^5.20.0",
