--- a/package.json
+++ b/package.json
@@ -1,165 +1,63 @@
 {
-    "name": "@arkecosystem/exchange-json-rpc",
-    "version": "1.0.0-next.0",
-    "description": "A JSON-RPC 2.0 specification compliant server for Exchanges to interact with the ARK Blockchain.",
-    "license": "MIT",
-    "author": "Brian Faust <brian@ark.io>",
-    "files": [
-        "/bin",
-        "/dist",
-        "/oclif.manifest.json"
-    ],
-    "main": "dist/index",
-    "types": "dist/index",
-    "bin": {
-        "exchange-json-rpc": "./bin/run"
-    },
+    "private": true,
+    "name": "exchange-json-rpc",
+    "description": "The packages that make up the ARK Core",
     "scripts": {
-        "build": "yarn clean && yarn compile",
-        "build:watch": "yarn clean && yarn compile -w",
-        "clean": "del dist",
-        "compile": "./node_modules/typescript/bin/tsc",
-        "exchange-json-rpc": "./bin/run",
+        "lerna": "./node_modules/lerna/cli.js",
+        "setup": "yarn && yarn bootstrap && yarn build",
+        "setup:clean": "yarn && yarn clean && yarn bootstrap && yarn build",
+        "bootstrap": "yarn lerna bootstrap",
+        "clean": "yarn lerna clean --yes",
+        "build": "yarn lerna run build",
+        "lint": "./node_modules/tslint/bin/tslint -c ./tslint.json -p ./tslint-config.json './packages/**/*/src/**/*.ts' --fix",
         "format": "yarn lint && yarn prettier",
-        "lint": "./node_modules/tslint/bin/tslint -c ./tslint.json -p ./tslint-config.json './src/**/*.ts' --fix",
-        "prepack": "./node_modules/.bin/oclif-dev manifest && npm shrinkwrap",
-        "postpack": "rm -f oclif.manifest.json",
-        "prepublishOnly": "yarn build",
-        "prettier": "prettier --write \"./*.{ts,js,json,md}\" \"./src/**/*.{ts,js,json,md}\" \"./__tests__/**/*.{ts,js,json,md}\"",
-        "test": "jest --forceExit --runInBand"
-    },
-    "jest": {
-        "bail": true,
-        "collectCoverage": true,
-        "collectCoverageFrom": [
-            "src/**/*.ts",
-            "!src/index.ts",
-            "!**/node_modules/**"
-        ],
-        "coverageDirectory": "<rootDir>/.coverage",
-        "coverageReporters": [
-            "json",
-            "lcov",
-            "text",
-            "clover",
-            "html"
-        ],
-        "moduleFileExtensions": [
-            "ts",
-            "tsx",
-            "js",
-            "jsx",
-            "json",
-            "node"
-        ],
-        "setupFilesAfterEnv": [
-            "jest-extended"
-        ],
-        "testEnvironment": "node",
-        "testMatch": [
-            "**/*.test.ts"
-        ],
-        "transform": {
-            "^.+\\.tsx?$": "ts-jest"
-        },
-        "verbose": true,
-        "watchman": false
-    },
-    "dependencies": {
-        "@arkecosystem/core-utils": "^2.4.0-next.3",
-        "@arkecosystem/crypto": "^2.4.0-next.3",
-        "@faustbrian/foreman": "^0.1.3",
-        "@hapi/boom": "^7.4.2",
-        "@hapi/hapi": "^18.3.1",
-        "@hapist/json-rpc": "^0.2.0",
-        "@hapist/whitelist": "^0.1.0",
-        "@oclif/command": "^1.5.14",
-        "@oclif/config": "^1.13.0",
-        "@oclif/plugin-autocomplete": "^0.1.0",
-        "@oclif/plugin-commands": "^1.2.2",
-        "@oclif/plugin-help": "^2.1.6",
-        "@oclif/plugin-not-found": "^1.2.2",
-        "@oclif/plugin-plugins": "^1.7.8",
-        "better-sqlite3": "^5.4.0",
-        "bip39": "^3.0.2",
-        "chalk": "^2.4.2",
-        "clear": "^0.1.0",
-        "cli-table3": "^0.5.1",
-        "cli-ux": "^5.2.1",
-        "dayjs": "^1.8.14",
-        "env-paths": "^2.2.0",
-        "execa": "^1.0.0",
-        "fast-levenshtein": "^2.0.6",
-        "fs-extra": "^8.0.1",
-        "is-reachable": "^3.1.0",
-        "latest-version": "^5.1.0",
-        "lodash.minby": "^4.6.0",
-        "lodash.sample": "^4.2.1",
-        "nodejs-tail": "^1.1.0",
-        "pino": "^5.12.6",
-        "pino-pretty": "^3.1.0",
-        "pretty-bytes": "^5.2.0",
-        "pretty-ms": "^5.0.0",
-        "prompts": "^2.1.0",
-        "read-last-lines": "^1.7.1",
-        "semver": "^6.1.1",
-        "sql": "^0.78.0",
-        "uuid": "^3.3.2",
-        "wif": "^2.0.6"
+        "prettier": "prettier --write \"./*.{ts,js,json,md}\" \"./packages/**/*.{ts,js,json,md}\" \"./__tests__/**/*.{ts,js,json,md}\"",
+        "test": "yarn lerna run test"
     },
     "devDependencies": {
         "@oclif/dev-cli": "^1.22.0",
         "@sindresorhus/tsconfig": "^0.3.0",
-        "@types/boom": "^7.2.1",
-        "@types/execa": "^0.9.0",
-        "@types/fast-levenshtein": "^0.0.1",
-        "@types/fs-extra": "^7.0.0",
-        "@types/hapi__boom": "^7.4.0",
-        "@types/hapi__hapi": "^18.2.1",
+        "@types/create-hash": "^1.2.0",
+        "@types/depcheck": "^0.6.0",
         "@types/jest": "^24.0.13",
-        "@types/lodash.minby": "^4.6.6",
-        "@types/lodash.sample": "^4.2.6",
-        "@types/pino": "^5.20.0",
+        "@types/js-yaml": "^3.12.1",
+        "@types/nock": "^10.0.3",
+        "@types/node": "^12.0.2",
         "@types/prettier": "^1.16.4",
-        "@types/pretty-bytes": "^5.1.0",
         "@types/pretty-ms": "^4.0.0",
         "@types/prompts": "^2.4.0",
         "@types/rimraf": "^2.0.2",
-        "@types/semver": "^6.0.0",
         "@types/uuid": "^3.4.4",
-        "@types/wif": "^2.0.1",
         "codecov": "^3.5.0",
-        "del-cli": "^2.0.0",
+        "create-hash": "^1.2.0",
+        "cross-env": "^5.2.0",
+        "del-cli": "^1.1.0",
+        "depcheck": "^0.8.0",
+        "husky": "^2.3.0",
         "jest": "^24.8.0",
         "jest-extended": "^0.11.1",
+        "js-yaml": "^3.13.1",
+        "lerna": "^3.14.1",
+        "lint-staged": "^8.1.7",
+        "nock": "^10.0.6",
+        "npm-check-updates": "^3.1.9",
         "prettier": "^1.17.1",
+        "prompts": "^2.0.4",
         "rimraf": "^2.6.3",
+        "snyk": "^1.165.1",
         "ts-jest": "^24.0.2",
-        "tslint": "^5.17.0",
+        "tslint": "^5.16.0",
         "tslint-config-prettier": "^1.18.0",
-        "typescript": "^3.5.1"
+        "typescript": "^3.4.5",
+        "typesync": "^0.5.1",
+        "uuid": "^3.3.2"
     },
-    "engines": {
-        "node": ">=10.x"
-    },
-    "publishConfig": {
-        "access": "public"
-    },
-    "oclif": {
-        "commands": "./dist/cli/commands",
+    "workspaces": [
+        "packages/*"
+    ],
+    "husky": {
         "hooks": {
-            "init": [
-                "./dist/cli/hooks/init/update"
-            ],
-            "command_not_found": [
-                "./dist/cli/hooks/command_not_found/suggest"
-            ]
-        },
-        "bin": "exchange-json-rpc",
-        "plugins": [
-            "@oclif/plugin-autocomplete",
-            "@oclif/plugin-commands",
-            "@oclif/plugin-help"
-        ]
+            "pre-commit": "lint-staged"
+        }
     }
 }
