--- a/package.json
+++ b/package.json
@@ -15,42 +15,24 @@
         "test": "yarn lerna run test"
     },
     "devDependencies": {
-        "@oclif/dev-cli": "^1.22.0",
         "@sindresorhus/tsconfig": "^0.3.0",
-        "@types/create-hash": "^1.2.0",
-        "@types/depcheck": "^0.6.0",
         "@types/jest": "^24.0.13",
-        "@types/js-yaml": "^3.12.1",
-        "@types/nock": "^10.0.3",
         "@types/node": "^12.0.2",
         "@types/prettier": "^1.16.4",
-        "@types/pretty-ms": "^4.0.0",
-        "@types/prompts": "^2.4.0",
         "@types/rimraf": "^2.0.2",
-        "@types/uuid": "^3.4.4",
         "codecov": "^3.5.0",
-        "create-hash": "^1.2.0",
-        "cross-env": "^5.2.0",
         "del-cli": "^1.1.0",
-        "depcheck": "^0.8.0",
         "husky": "^2.3.0",
         "jest": "^24.8.0",
         "jest-extended": "^0.11.1",
-        "js-yaml": "^3.13.1",
         "lerna": "^3.14.1",
         "lint-staged": "^8.1.7",
-        "nock": "^10.0.6",
-        "npm-check-updates": "^3.1.9",
         "prettier": "^1.17.1",
-        "prompts": "^2.0.4",
         "rimraf": "^2.6.3",
-        "snyk": "^1.165.1",
         "ts-jest": "^24.0.2",
         "tslint": "^5.16.0",
         "tslint-config-prettier": "^1.18.0",
-        "typescript": "^3.4.5",
-        "typesync": "^0.5.1",
-        "uuid": "^3.3.2"
+        "typescript": "^3.4.5"
     },
     "workspaces": [
         "packages/*"
