--- a/packages/rpc/package.json
+++ b/packages/rpc/package.json
@@ -72,6 +72,7 @@
         "bip39": "^3.0.2",
         "fs-extra": "^8.0.1",
         "is-reachable": "^3.1.0",
+        "json-buffer": "^3.0.1",
         "lodash.sample": "^4.2.1",
         "pino": "^5.12.6",
         "pino-pretty": "^3.1.0",
