--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "private": true,
     "name": "exchange-json-rpc",
-    "description": "The packages that make up the ARK Core",
+    "description": "A JSON-RPC 2.0 specification compliant server for Exchanges.",
     "scripts": {
         "lerna": "./node_modules/lerna/cli.js",
         "setup": "yarn && yarn bootstrap && yarn build",
