--- a/lerna.json
+++ b/lerna.json
@@ -3,5 +3,5 @@
     "npmClient": "yarn",
     "packages": ["packages/*"],
     "useWorkspaces": true,
-    "version": "1.0.0-next.5"
+    "version": "1.0.0"
 }
