--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@arkecosystem/exchange-json-rpc-cli",
-    "version": "1.0.0-next.5",
+    "version": "1.0.0",
     "description": "A JSON-RPC 2.0 specification compliant server for Exchanges to interact with the ARK Blockchain.",
     "license": "MIT",
     "author": "Brian Faust <brian@ark.io>",
@@ -65,8 +65,8 @@
         "watchman": false
     },
     "dependencies": {
-        "@arkecosystem/crypto": "^2.4.0-next.3",
-        "@arkecosystem/exchange-json-rpc": "^1.0.0-next.5",
+        "@arkecosystem/crypto": "^2.4.0",
+        "@arkecosystem/exchange-json-rpc": "^1.0.0",
         "@faustbrian/foreman": "^0.1.3",
         "@oclif/command": "^1.5.14",
         "@oclif/config": "^1.13.0",
