--- a/packages/rpc/package.json
+++ b/packages/rpc/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@arkecosystem/exchange-json-rpc",
-    "version": "1.0.0-next.5",
+    "version": "1.0.0",
     "description": "A JSON-RPC 2.0 specification compliant server for Exchanges to interact with the ARK Blockchain.",
     "license": "MIT",
     "author": "Brian Faust <brian@ark.io>",
@@ -62,8 +62,8 @@
         "watchman": false
     },
     "dependencies": {
-        "@arkecosystem/core-utils": "^2.4.0-next.3",
-        "@arkecosystem/crypto": "^2.4.0-next.3",
+        "@arkecosystem/core-utils": "^2.4.0",
+        "@arkecosystem/crypto": "^2.4.0",
         "@hapi/boom": "^7.4.2",
         "@hapi/hapi": "^18.3.1",
         "@hapist/json-rpc": "^0.2.0",
