--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -65,7 +65,7 @@
         "watchman": false
     },
     "dependencies": {
-        "@arkecosystem/crypto": "^2.4.0",
+        "@arkecosystem/crypto": "^2.4 || ^2.5",
         "@arkecosystem/exchange-json-rpc": "^1.0.0",
         "@faustbrian/foreman": "^0.1.3",
         "@oclif/command": "^1.5.14",
