chore(deps): update all dependencies to their latest versions

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
     "extends": "@sindresorhus/tsconfig",
     "compilerOptions": {
         "alwaysStrict": false,
+        "esModuleInterop": true,
         "incremental": true,
         "lib": ["es2018"],
         "module": "commonjs",
