--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,9 +19,9 @@ jobs:
     - name: Install & Build
       run: yarn setup
     - name: Test
-      run: yarn test --coverage
+      run: yarn test
     - name: Codecov
-      run: ./node_modules/.bin/codecov
+      run: bash <(curl -s https://codecov.io/bash)
       
       env:
         CI: true
