--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,12 +3,13 @@ name: Test
 on: [push]
 
 jobs:
-  test:
-    name: Test on node ${{ matrix.node_version }} and ${{ matrix.os }}
+  build:
     runs-on: ubuntu-latest
+    
     strategy:
       matrix:
         node-version: [10.x, 11.x, 12.x]
+        
     steps:
     - uses: actions/checkout@v1
     - name: Use Node.js ${{ matrix.node-version }}
