--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Test
       run: yarn test
     - name: Codecov
-      run: bash <(curl -s https://codecov.io/bash)
+      run: ./node_modules/.bin/codecov --token=${{ secrets.CODECOV_TOKEN }}
       
       env:
         CI: true
