--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,9 +3,10 @@ name: Test
 on:
     push:
         branches:
-            - "**"
+            - "*"
+            - "*/*"
     pull_request:
-        types: [opened]
+        types: [ready_for_review, synchronize, opened]
 
 jobs:
     unit:
@@ -13,20 +14,21 @@ jobs:
 
         strategy:
             matrix:
-                node-version: [10.x, 11.x, 12.x]
+                node-version: [10.x, 12.x]
 
         steps:
             - uses: actions/checkout@v1
+            
             - name: Use Node.js ${{ matrix.node-version }}
               uses: actions/setup-node@v1
               with:
                   node-version: ${{ matrix.node-version }}
+            
             - name: Install & Build
-              run: yarn setup
+              run: yarn setup --frozen-lockfile
+            
             - name: Test
               run: yarn test
+            
             - name: Codecov
               run: ./node_modules/.bin/codecov --token=${{ secrets.CODECOV_TOKEN }}
-
-              env:
-                  CI: true
