--- a/packages/rpc/package.json
+++ b/packages/rpc/package.json
@@ -58,7 +58,7 @@
         "watchman": false
     },
     "dependencies": {
-        "@arkecosystem/crypto": "^2.4 || ^2.5",
+        "@arkecosystem/crypto": "^2.4 || ^2.5 || ^2.5.0-next.0 || ^2.6.0-next.0",
         "@hapi/boom": "^8.0.0",
         "@hapi/hapi": "^18.3.1",
         "@hapist/json-rpc": "^0.2.0",
