--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -67,6 +67,7 @@
     "dependencies": {
         "@arkecosystem/crypto": "^2.4 || ^2.5",
         "@arkecosystem/exchange-json-rpc": "^1.0.6",
+        "@arkecosystem/peers": "^0.2.1",
         "@faustbrian/foreman": "^0.1.3",
         "@oclif/command": "^1.5.14",
         "@oclif/config": "^1.13.0",
