--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,8 +3,8 @@ name: Test
 on:
     push:
         branches:
-            - "*"
-            - "*/*"
+            - "master"
+            - "develop"
     pull_request:
         types: [ready_for_review, synchronize, opened]
 
@@ -14,7 +14,7 @@ jobs:
 
         strategy:
             matrix:
-                node-version: [10.x, 12.x]
+                node-version: [12.x]
 
         steps:
             - uses: actions/checkout@v1
