--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,8 +3,8 @@ name: Test
 on:
     push:
         branches:
-            - "*"
-            - "*/*"
+            - "master"
+            - "develop"
     pull_request:
         types: [ready_for_review, synchronize, opened]
 
@@ -14,11 +14,18 @@ jobs:
 
         strategy:
             matrix:
-                node-version: [10.x, 12.x]
+                node-version: [12.x]
 
         steps:
             - uses: actions/checkout@v1
-            
+
+            - name: Cache node modules
+              uses: actions/cache@v1
+              with:
+                path: node_modules
+                key: ${{ runner.os }}-node-${{ hashFiles('**/yarn.lock') }}
+                restore-keys: ${{ runner.os }}-node-
+
             - name: Use Node.js ${{ matrix.node-version }}
               uses: actions/setup-node@v1
               with:
