--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@arkecosystem/exchange-json-rpc-cli",
+    "name": "@arkecosystem/exchange-json-rpc",
     "version": "1.0.6",
     "description": "A JSON-RPC 2.0 specification compliant server for Exchanges to interact with the ARK Blockchain.",
     "license": "MIT",
@@ -30,7 +30,6 @@
     },
     "dependencies": {
         "@arkecosystem/crypto": "^2.6.0-next.0",
-        "@arkecosystem/exchange-json-rpc": "^1.0.6",
         "@arkecosystem/peers": "^0.2.1",
         "@faustbrian/foreman": "^0.1.3",
         "@hapi/boom": "^9.0.0",
@@ -39,6 +38,7 @@
         "@hapist/whitelist": "^0.1.0",
         "@oclif/command": "^1.5.14",
         "@oclif/config": "^1.13.0",
+        "@oclif/parser": "^3.8.4",
         "@oclif/plugin-autocomplete": "^0.1.0",
         "@oclif/plugin-commands": "^1.2.2",
         "@oclif/plugin-help": "^2.1.6",
@@ -62,8 +62,8 @@
         "lodash.minby": "^4.6.0",
         "lodash.sample": "^4.2.1",
         "nodejs-tail": "^1.1.0",
-        "pino-pretty": "^3.1.0",
         "pino": "^5.12.6",
+        "pino-pretty": "^3.1.0",
         "pretty-bytes": "^5.2.0",
         "pretty-ms": "^5.0.0",
         "prompts": "^2.1.0",
@@ -98,16 +98,16 @@
         "cross-env": "^6.0.0",
         "del-cli": "^3.0.0",
         "husky": "^4.0.0",
-        "jest-extended": "^0.11.2",
         "jest": "^24.8.0",
+        "jest-extended": "^0.11.2",
         "lerna": "^3.15.0",
         "lint-staged": "^9.2.0",
         "nock": "^11.7.0",
         "prettier": "^1.18.2",
         "rimraf": "^3.0.0",
         "ts-jest": "^24.0.2",
-        "tslint-config-prettier": "^1.18.0",
         "tslint": "^5.18.0",
+        "tslint-config-prettier": "^1.18.0",
         "typescript": "^3.5.3"
     },
     "engines": {
