--- a/packages/rpc/package.json
+++ b/packages/rpc/package.json
@@ -21,7 +21,7 @@
         "test": "jest"
     },
     "dependencies": {
-        "@arkecosystem/crypto": "^2.6.0-next.0",
+        "@arkecosystem/crypto": "^2.6",
         "@hapi/boom": "^9.0.0",
         "@hapi/hapi": "^19.0.0",
         "@hapist/json-rpc": "^0.2.0",
