--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,9 @@
 {
     "lerna": "3.5.0",
     "npmClient": "yarn",
-    "packages": ["packages/*"],
+    "packages": [
+        "packages/*"
+    ],
     "useWorkspaces": true,
-    "version": "2.0.0"
+    "version": "2.0.1"
 }
