--- a/packages/rpc/package.json
+++ b/packages/rpc/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@arkecosystem/exchange-json-rpc",
-    "version": "2.0.0",
+    "version": "2.0.1",
     "description": "A JSON-RPC 2.0 specification compliant server for Exchanges to interact with the ARK Blockchain.",
     "license": "MIT",
     "author": "Brian Faust <brian@ark.io>",
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "@arkecosystem/crypto": "^2.6",
+        "@arkecosystem/peers": "^0.2.1",
         "@hapi/boom": "^9.0.0",
         "@hapi/hapi": "^19.0.0",
         "@hapist/json-rpc": "^0.2.0",
