--- a/lerna.json
+++ b/lerna.json
@@ -1,9 +1,7 @@
 {
     "lerna": "3.5.0",
     "npmClient": "yarn",
-    "packages": [
-        "packages/*"
-    ],
+    "packages": ["packages/*"],
     "useWorkspaces": true,
-    "version": "2.0.1"
+    "version": "2.1.0"
 }
