--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -65,7 +65,7 @@
         "watchman": false
     },
     "dependencies": {
-        "@arkecosystem/crypto": "^2.6",
+        "@arkecosystem/crypto": "^3.0.0-next.34",
         "@arkecosystem/exchange-json-rpc": "^2.1.0",
         "@faustbrian/foreman": "^0.1.3",
         "@oclif/command": "^1.5.14",
